[package]
name = "ghapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
reqwest = { version = "0.11.22", features = [ "blocking", "json" ] }
serde = { version = "1.0.171", features = [ "derive" ] }
serde_yaml = "0.9.27"
tokio = { version = "1.33.0", features = ["macros"] }
tower-lsp = "0.20.0"
