[package]
name = "ghapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug = []

[dependencies]
bytes = "1.5.0"
clap = { version = "4.4.7", features = ["derive"] }
futures = "0.3.30"
git2 = "0.18.1"
reqwest = { version = "0.11.22", features = [ "blocking", "json" ] }
serde = { version = "1.0.171", features = [ "derive" ] }
serde_yaml = "0.9.27"
tokio = { version = "1.33.0", features = ["macros", "io-std"] }
tower-lsp = "0.20.0"
